--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,38 @@
+asn1crypto==0.24.0
+astroid==2.0.4
+autopep8==1.4.3
+bcrypt==3.1.4
+beautifulsoup4==4.6.3
+bs4==0.0.1
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
 Click==7.0
-Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-psycopg2==2.7.6.1
-SQLAlchemy==1.2.14
-Werkzeug==0.14.1
-WTForms==2.2.1
+cryptography==2.3.1
+decorator==4.3.0
+future==0.17.1
+geocoder==1.38.1
+idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+lxml==4.2.5
+mccabe==0.6.1
+netmiko==2.3.0
+paramiko==2.4.2
+pep8==1.7.1
+phonescrape==0.0.1
+pyasn1==0.4.4
+pycodestyle==2.4.0
+pycparser==2.19
+pylint==2.1.1
+PyNaCl==1.3.0
+pyserial==3.4
+PyYAML==3.13
+ratelim==0.1.6
+requests==2.19.1
+scp==0.12.1
+six==1.11.0
+textfsm==0.4.1
+urllib3==1.23
+virtualenv==16.1.0
+wrapt==1.10.11
